--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
             <ul class="nav-links">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Skills</a></li>
-                <!-- <li><a href="#">Services</a></li> -->
+                <!-- <li><a href="#">Servi~ces</a></li> -->
                 <li><a href="#">About</a></li>
             </ul>
         </nav>
