--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nikhil Maurya</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header class="navbar">
@@ -25,8 +25,8 @@
     <main class="hero">
         <section class="intro">
             <div class="social-links">
-                <a href="#"><img src="../svg/linkedin.svg" alt="LinkedIn"></a>
-                <a href="#"><img src="../svg/github.svg" alt="GitHub"></a>
+                <a href="#"><img src="./svg/linkedin.svg" alt="LinkedIn"></a>
+                <a href="#"><img src="./svg/github.svg" alt="GitHub"></a>
                 <!-- <a href="#"><img src="behance.svg" alt="Behance"></a> -->
             </div>
             <div class="intro-text">
@@ -46,7 +46,10 @@
         </section>
     </main>
 
+    <script src="./js/main.js"></script>
 </body>
 
  
 </html>
+
+<!-- sass css/styles.scss css/styles.css -->
